2005-02-20  Neil Williams  <linux@codehelp.co.uk>
	* src/engine/qof_book_merge.c: Fix double free of the targetList
	entities that cause xaccGroupGetNumSubAccounts to generate a
	segmentation fault.
	* src/engine/kvp_frame.c: 
	* src/engine/kvp_frame.h:
	Add kvp_value_to_bare_string to
	generate strings without debug information.
	* src/engine/qofsession.h:
	* src/engine/qofsession.c:
	Documentation tweaks to bring them into line with QOF and the
	gnucash-gnome2-dev branch.

2005-02-16  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-utils.c: When trying to load the symbol
	  from a glade file, Fall back to dlsym() if g_module_symbol()
	  fails.  This is necessary to find the symbols on on certain *BSD
	  systems.

	* acinclude.m4: Add mips, mipsel, arm, and m68k for Debian.

2005-02-06  Chris Lyttle  <chris@wilddev.net>

	* src/scm/main.scm: Update for 1.8.11 release

2005-02-06  Derek Atkins  <derek@ihtfp.com>

	* src/engine/date.c: Fix the last-day-of-month computation for
	  leap years.  Need to use modulo, not divide.  (Patch by
	  Neil Williams.

2005-02-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-gettrans.c: Fix HBCI date range
	for statement download.

2005-02-05  Derek Atkins  <derek@ihtfp.com>

	* src/report/locale-specific/us/Makefile.am: make sure the
	  scheme reports are part of the DIST.

2005-01-30  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Account.c:
	  This patch fixes: (QofAccessFunc)xaccAccountSetNonStdSCU in
	  src/engine/Account.c - that's a Set routine allocated as a
	  QofAccessFunc - the patch changes it to the appropriate Get
	  routine - the QofSetterFunc is OK.

	Neil Williams' QOF sync patch:
	* This patch updates the QOF merge code to current QOF to bring
	  the HEAD branch into sync. This update also makes
	  qof_book_merge_param_as_string output strings that are
	  compatible with QSF: using false instead of FALSE in string
	  output and using the QSF_XSD_TIME for the datestrings.
	